[tool.poetry]
name = "IT102"
version = "0.1.0"
description = "Code supporting lectures and workshops"
authors = ["jgamper <jevgenij.gamper5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.2"
torchvision = "^0.11.3"
matplotlib = "^3.5.1"
jax = {extras = ["cpu"], version = "^0.3.0"}
pandas = "^1.4.1"
ipykernel = "^6.9.0"
sklearn = "^0.0"
pytorch-lightning = "^1.5.10"
black = "^22.1.0"
seaborn = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
